--- a/openstack-dashboard/enterprisesupport/supportlinks/templates/supportlinks/index.html
+++ b/openstack-dashboard/enterprisesupport/supportlinks/templates/supportlinks/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load i18n %}
+{% load i18n staticfiles %}
 {% block title %}{% trans "Supportlinks" %}{% endblock %}
 
 {% block page_header %}
